test/Fail/CompileGHCPragmaPatternSynonym.err
CompileGHCPragmaPatternSynonym.agda:6,1-22: error: [GenericError]
Cannot COMPILE pattern synonym p
when scope checking the declaration
  {-# COMPILE GHC p #-}
